--- a/docs/api.mdx
+++ b/docs/api.mdx
@@ -57,3 +57,41 @@ This action can cause serious issues.
 >
   Get Started
 </a>
+
+<br />
+<br />
+<br />
+
+$$
+{\displaystyle \mathrm {LMTD} ={\frac {\Delta T_{A}-\Delta T_{B}}{\ln \left({\frac {\Delta T_{A}}{\Delta T_{B}}}\right)}}={\frac {\Delta T_{A}-\Delta T_{B}}{\ln \Delta T_{A}-\ln \Delta T_{B}}}}
+$$
+
+
+<br />
+<br />
+<br />
+
+$$
+{\displaystyle Q=\alpha \times A\times \mathrm {LMTD} }
+$$
+
+<br />
+<br />
+
+$$
+\eta_c = \frac{h_{2s} - h_1}{h_2 - h_1}
+$$
+
+$$
+\eta_c =
+\frac{\ln\!\left(\frac{T_{2s}}{T_1}\right)}
+{\ln\!\left(\frac{T_2}{T_1}\right)}
+=
+\frac{\ln T_{2s} - \ln T_1}
+{\ln T_2 - \ln T_1}
+$$
+
+
+$$
+I = \int_0^{2\pi} \sin(x)\,dx
+$$
